# portfolio

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  genindex.html  index.html  makefile  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
__util/webrtc_util/: media_stream_transformers.py  real_time_interface.py
_sources/: index.rst.txt
app_cam_distance/: apps.py  consumers.py  routing.py  urls.py  views.py
app_cam_distance/scripts/: stun_list.txt  stun_parser.py
app_cam_distance/templates/: cam_distance_app.html  face_detection_div.html  qr_detection_div.html
app_magic_eye/: apps.py  urls.py
app_magic_eye/templates/: magic_eye.html
app_morse_code/: apps.py  consumers.py  urls.py  views.py
app_morse_code/templates/: listening_div.html  mnemonic_table.html  morse_code_app.html  practice_div.html  speedtap_div.html
app_whistle_detector/: apps.py  urls.py  views.py
app_whistle_detector/static/: recorder.js
app_whistle_detector/templates/: whistle_detector.html
apps/main/: models.py  (+2 more)
devops/: helpful_resources.md  readme.md  restart_services.sh  update_prod.sh
docs/: conf.py  debugging guide  helpful_resources.md  helpful_resources.txt
magic_eye/: apps.py  urls.py  views.py
main/: admin.py  models.py  urls.py  views.py
new_main/: apps.py  urls.py  views.py
portfolio/: asgi.py  routing.py  settings.py  urls.py
templates/: 404.html  502.html  _base.html  go_back_element.html  loading_icon.html  project_base.html
(+202 files in other folders)
