[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["kan kawabata <kkawabat@asu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
magic-eye-util = {git = "https://github.com/kkawabat/MagicEyeUtil.git"}
whistle-detector = {git = "https://github.com/kkawabat/WhistleDetector.git"}
django = "^4.2.3"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
mistune = "^3.0.1"
pygments = "^2.15.1"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
morse-code-util = {git = "https://github.com/kkawabat/Morse-Code-Util.git"}
opencv-cam-distance-measurer = {git = "https://github.com/kkawabat/opencv_cam_distance_measurer.git"}
aiortc = "^1.5.0"
av = "^10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
